<resources>
    <string name="app_name">Calculator Application</string>
    <string name="_4">4</string>
    <string name="mul">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="div">/</string>
    <string name="mod">%</string>
    <string name="x">X</string>
    <string name="c">C</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="min">-</string>
    <string name="_0">0</string>
    <string name="sci">SCI</string>
    <string name="eq">=</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="left_parenthis">(</string>
    <string name="ex">ex</string>
    <string name="lg">lg</string>
    <string name="nlg">nlg</string>
    <string name="right_parenthis">)</string>
    <string name="pow">pow</string>
    <string name="fac">FAC</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="dot">.</string>
    <string name="todo">TODO</string>
    <string name="root">root</string>
    <string name="scienctific">Scienctific</string>
    <string name="his">HIS</string>
    <string name="view_all_data">View All Data</string>
    <string name="enter_id">Enter Id</string>
    <string name="delete_data">Delete Data</string>
    <string name="back">Back</string>
    <string name="input">_input</string>
    <string name="ouput">_input</string>
    <string name="id">_id</string>
    <string name="recyclerview">RECYCLERVIEW</string>
    <string name="output">output</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="view_history">View History</string>
</resources>