<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#080808"
    android:orientation="vertical"
    tools:context=".scientificCalculator">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input1_show2"
        android:layout_marginTop="85dp"
        android:textColor="#ffffff"
        android:gravity="end"
        android:padding="5dp"
        android:textSize="15sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:textSize="15sp"
        android:padding="5dp"
        android:textColor="#ffffff"
        android:gravity="end"
        android:id="@+id/output_show2"
        />
    <TextView
        android:id="@+id/input_show1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:textColorHint="#ffffff"
        android:layout_marginStart="3dp"
        android:textColor="#ffffff"
        android:layout_marginTop="160dp"
        android:fontFamily="sans-serif-black"
        android:textSize="30sp"
        android:hint="@string/_0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <TextView
        android:id="@+id/output_show1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="230dp"
        android:fontFamily="sans-serif-black"
        android:gravity="end"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <GridLayout
        android:rowCount="6"
        android:columnCount="5"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="290dp"
        tools:ignore="RtlHardcoded">
        <Button
            android:id="@+id/exponent"
            android:layout_row="0"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:layout_column="0"
            android:text="@string/ex"
            android:textSize="20sp"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/log"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/lg"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/nlog"
            android:layout_row="0"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:layout_column="2"
            android:layout_width="80dp"
            android:text="@string/nlg"
            android:textSize="20sp"
            />
        <Button
            android:id="@+id/left_parenthesis"
            android:layout_row="0"
            android:layout_column="3"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:text="@string/left_parenthis"
            android:textSize="20sp"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/right_parenthesis"
            android:layout_row="0"
            android:layout_column="4"
            android:text="@string/right_parenthis"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/power"
            android:layout_row="1"
            android:layout_column="0"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:text="@string/pow"
            android:textSize="15sp"
            android:layout_width="80dp"
            />
        <ImageButton
            android:id="@+id/clear1"
            android:src="@drawable/ic_baseline_clear_24"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="#080808"
            android:contentDescription="@string/todo" />
        <ImageButton
            android:id="@+id/Backspace1"
            android:textSize="15sp"
            android:layout_row="1"
            android:layout_column="4"
            android:layout_width="80dp"
            android:background="#080808"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_backspace_24"
            android:contentDescription="@string/todo" />
        <Button
            android:id="@+id/Modulus1"
            android:text="@string/mod"
            android:textSize="20sp"
            android:layout_row="1"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#FFA500"
            android:layout_column="1"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/divide1"
            android:text="@string/div"
            android:textSize="20sp"
            android:layout_row="1"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#FFA500"
            android:layout_column="2"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/square_root"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/root"
            />
        <Button
            android:id="@+id/seven1"
            android:layout_width="80dp"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:textSize="20sp"
            android:layout_row="2"
            android:layout_column="1"
            />

        <Button
            android:id="@+id/eight1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:background="#080808"
            android:text="@string/_8"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/nine1"
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            android:text="@string/_9"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_row="2"
            android:layout_column="3"
            />

        <Button
            android:id="@+id/multiply1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="4"
            android:background="#080808"
            android:text="@string/mul"
            android:textColor="#FFA500"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/factorial"
            android:layout_row="3"
            android:layout_column="0"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            android:text="@string/fac"
            android:textSize="20sp"
            />
        <Button
            android:id="@+id/four1"
            android:text="@string/_4"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/five1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:text="@string/_5"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/six1"
            android:text="@string/_6"
            android:textSize="20sp"
            android:layout_row="3"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:layout_column="3"
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/minus1"
            android:text="@string/min"
            android:textSize="25sp"
            android:layout_row="3"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#FFA500"
            android:layout_column="4"
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/sin"
            android:text="@string/sin"
            android:textSize="20sp"
            android:layout_row="4"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:layout_column="0"
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/one1"
            android:text="@string/_1"
            android:textSize="20sp"
            android:layout_row="4"
            android:layout_column="1"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/two1"
            android:text="@string/_2"
            android:textSize="20sp"
            android:layout_row="4"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:layout_column="2"
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/three1"
            android:text="@string/_3"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/plus1"
            android:text="@string/plus"
            android:textSize="25sp"
            android:layout_row="4"
            android:layout_column="4"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#FFA500"
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/normal"
            android:text="@string/sci"
            android:textSize="15sp"
            android:layout_row="5"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#FFA500"
            android:layout_column="0"
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/cos"
            android:text="@string/his"
            android:textSize="20sp"
            android:layout_row="5"
            android:layout_column="1"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/zero1"
            android:text="@string/_0"
            android:textSize="20sp"
            android:layout_row="5"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#ffffff"
            android:layout_column="2"
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/dot1"
            android:text="@string/dot"
            android:textSize="25sp"
            android:background="#080808"
            android:textColor="#ffffff"
            android:layout_row="5"
            android:layout_column="3"
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            />
        <Button
            android:id="@+id/equal1"
            android:text="@string/eq"
            android:textSize="25sp"
            android:layout_row="5"
            android:layout_column="4"
            android:textStyle="bold"
            android:background="#080808"
            android:textColor="#FFA500"
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            />
    </GridLayout>
</RelativeLayout>