<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#080808"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:id="@+id/input1_show"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:padding="5dp"
        android:gravity="end"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:textSize="15sp"
        android:padding="5dp"
        android:textColor="#ffffff"
        android:gravity="end"
        android:id="@+id/output1_show"
        />
    <TextView
        android:id="@+id/input_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:layout_marginStart="3dp"
        android:textColor="#ffffff"
        android:layout_marginTop="180dp"
        android:fontFamily="sans-serif-black"
        android:textSize="30sp"
        android:layout_alignParentLeft="true"
        android:hint="@string/_0"
        android:textColorHint="#ffffff"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginLeft="3dp" />

    <TextView
        android:id="@+id/output_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="250dp"
        android:padding="10dp"
        android:fontFamily="sans-serif-black"
        android:gravity="end"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_alignParentLeft="true" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="-1dp"
        android:columnCount="5"
        android:rowCount="5"
        tools:ignore="RtlHardcoded"
        android:layout_alignParentRight="true"
        android:layout_marginRight="-1dp">

        <ImageButton
            android:id="@+id/clear"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="0"
            android:background="#080808"
            android:src="@drawable/ic_baseline_clear_24"
            android:contentDescription="@string/todo" />
        <ImageButton
            android:id="@+id/Backspace"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="1"
            android:background="#080808"
            android:src="@drawable/ic_baseline_backspace_24"
            android:contentDescription="@string/todo"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/modulus"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:textStyle="bold"
            android:layout_column="2"
            android:background="#080808"
            android:text="@string/mod"
            android:textColor="#FFA500"
            android:textSize="30sp" />

        <Button
            android:id="@+id/div"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:textStyle="bold"
            android:background="#080808"
            android:text="@string/div"
            android:textColor="#FFA500"
            android:textSize="30sp" />

        <Button
            android:id="@+id/seven"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:background="#080808"
            android:textStyle="bold"
            android:text="@string/_7"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/eight"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:textStyle="bold"
            android:background="#080808"
            android:text="@string/_8"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/nine"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:background="#080808"
            android:text="@string/_9"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="30sp" />
        <Button
            android:id="@+id/multiply"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="3"
            android:background="#080808"
            android:text="@string/mul"
            android:textStyle="bold"
            android:textColor="#FFA500"
            android:textSize="30sp" />
        <Button
            android:id="@+id/four"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:background="#080808"
            android:textStyle="bold"
            android:text="@string/_4"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />
        <Button
            android:id="@+id/five"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:background="#080808"
            android:textStyle="bold"
            android:text="@string/_5"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/six"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:textStyle="bold"
            android:background="#080808"
            android:text="@string/_6"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/minus"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="3"
            android:background="#080808"
            android:text="@string/min"
            android:textColor="#FFA500"
            android:textStyle="bold"

            android:textSize="30sp" />

        <Button
            android:id="@+id/dot"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="2"
            android:background="#080808"
            android:text="."
            android:textColor="#FFFFFF"
            android:textStyle="bold"

            android:textSize="30sp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/zero"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:background="#080808"
            android:text="@string/_0"
            android:textStyle="bold"

            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/scientific"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:background="#080808"
            android:text="@string/sci"
            android:textStyle="bold"
            android:onClick="callSecondActivity"
            android:textColor="#FFA500"
            android:textSize="30sp" />

        <Button
            android:id="@+id/equal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="3"
            android:background="#080808"
            android:text="@string/eq"
            android:textStyle="bold"

            android:textColor="#FFA500"
            android:textSize="30sp" />

        <Button
            android:id="@+id/one"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:background="#080808"
            android:text="@string/_1"
            android:textStyle="bold"

            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/two"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:background="#080808"
            android:textStyle="bold"
            android:text="@string/_2"
            android:textColor="#FFFFFF"
            android:textSize="30sp"

            />

        <Button
            android:id="@+id/three"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:textStyle="bold"
            android:layout_column="2"
            android:background="#080808"
            android:text="@string/_3"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/plus"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="3"
            android:background="#080808"
            android:text="@string/plus"
            android:textStyle="bold"
            android:textColor="#FFA500"
            android:textSize="30sp" />
    </GridLayout>
</RelativeLayout>