<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:accessibilityHeading="false"
    android:background="#080808"
    tools:context=".History">

    <Button
        android:id="@+id/viewAllData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="116dp"
        android:text="@string/view_all_data" />

    <Button
        android:id="@+id/deleteData"
        android:layout_width="122dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/recycleView"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="278dp"
        android:layout_marginEnd="-5dp"
        android:layout_toEndOf="@+id/editTextNumber"
        android:text="@string/delete_data" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="161dp"
        android:layout_height="34dp"
        android:layout_alignStart="@+id/viewAllData"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="278dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_id"
        android:inputType="number"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <Button
        android:id="@+id/back"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextNumber"
        android:layout_alignEnd="@+id/deleteData"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="237dp"
        android:text="@string/back" />

    <Button
        android:id="@+id/recycleView"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="62dp"
        android:layout_marginBottom="561dp"
        android:layout_toEndOf="@+id/viewAllData"
        android:onClick="recyclerView"
        android:text="@string/recyclerview" />


</RelativeLayout>